--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "react-dom": "^18.3.1",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4",
-    "homepage": "https://rainmkii.github.io/Ma-Carte-Perso/"
+    "homepage": "https://RainMkII.github.io/Ma-Carte-Perso"
     
     
   },
